--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
+encoding//baike/html_downloader.py=UTF-8
+encoding//baike/html_outputer.py=UTF-8
+encoding//baike/html_parser.py=UTF-8
 encoding//baike/spider_main.py=UTF-8
 encoding//baike/url_manager.py=UTF-8
+encoding//choujiang/spider.py=UTF-8
 encoding//dianping/main.py=utf-8
 encoding//dianping/output=US-ASCII
 encoding//dianping/sender.py=UTF-8
